--- a/micro-java/pom.xml
+++ b/micro-java/pom.xml
@@ -17,7 +17,8 @@
     <quarkus.platform.group-id>com.redhat.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.11.6.Final-redhat-00001</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <!-- Property to force using Deployments over DeploymentConfig objects goes here. -->
+    <jkube.build.switchToDeployment>true</jkube.build.switchToDeployment>
+  <!-- Property to force using Deployments over DeploymentConfig objects goes here. -->
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -105,6 +106,14 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+<!-- JKube Maven plugin -->
+      <plugin>
+        <groupId>org.eclipse.jkube</groupId>
+        <artifactId>openshift-maven-plugin</artifactId>
+        <version>1.2.0</version>
+</plugin>
+
+
     </plugins>
   </build>
   <profiles>
@@ -136,7 +145,6 @@
               </execution>
             </executions>
           </plugin>
-          <!-- Adding the jkube plugin configuration here -->
         </plugins>
       </build>
       <properties>
